--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 ffmpeg/
 
 4FrameTest.xcodeproj/project.xcworkspace/xcuserdata/liaokuohsun.xcuserdatad/UserInterfaceState.xcuserstate
+
+4FrameTest.xcodeproj/project.xcworkspace/xcshareddata/4FrameTest.xccheckout
