--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 ffmpeg/
 
 4FrameTest.xcodeproj/project.xcworkspace/xcuserdata/liaokuohsun.xcuserdatad/UserInterfaceState.xcuserstate
+
+4FrameTest.xcodeproj/xcuserdata/liaokuohsun.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+4FrameTest.xcodeproj/project.xcworkspace/xcuserdata/miuki001.xcuserdatad/UserInterfaceState.xcuserstate
+
+4FrameTest.xcodeproj/project.xcworkspace/xcuserdata/miuki001.xcuserdatad/UserInterfaceState.xcuserstate
