add ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@ ffmpeg/
 
 4FrameTest.xcodeproj/project.xcworkspace/xcuserdata/liaokuohsun.xcuserdatad/UserInterfaceState.xcuserstate
 
+4FrameTest.xcodeproj/project.xcworkspace/xcshareddata/4FrameTest.xccheckout
+
+4FrameTest.xcodeproj/project.xcworkspace/xcuserdata/miuki001.xcuserdatad/UserInterfaceState.xcuserstate
+
 4FrameTest.xcodeproj/xcuserdata/liaokuohsun.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
-
-4FrameTest.xcodeproj/project.xcworkspace/xcuserdata/miuki001.xcuserdatad/UserInterfaceState.xcuserstate
-
-4FrameTest.xcodeproj/project.xcworkspace/xcuserdata/miuki001.xcuserdatad/UserInterfaceState.xcuserstate
